# Medical

./: .gitignore  NER_Training_Colab.ipynb  README.md  pipeline_clinical_nlp.md  pyproject.toml
configs/: ner_labels.yaml
entity_linking/: HUONG_DAN.md  build_alias_table.py  dictionary.py  evaluate.py  matcher_vectorized.py  normalize.py  paraphrase_test_set.py  paraphrase_test_set_extended.py  paraphrase_test_set_full.py  run_paraphrase_eval.py  run_pipeline_example.py  test_matcher.py
ner_data/: convert_phoner.py  eval_and_sanity_check.py  merge_ner_datasets.py  test_alignment_logic.py  train_ner.py
ner_data/converted_data/: combined_dev.jsonl  combined_test.jsonl  combined_train.jsonl  phoner_dev.jsonl  phoner_test.jsonl  phoner_train.jsonl  synthetic_ehr.jsonl  synthetic_ehr_batch2.jsonl  synthetic_ehr_batch3.jsonl  synthetic_ehr_batch4.jsonl  synthetic_ehr_batch5_lab.jsonl  synthetic_ehr_batch5_patient_info.jsonl  vimq_dev.jsonl  vimq_test.jsonl  vimq_train.jsonl
scripts/: augment_rare_patterns.py
src/clinical_nlp/entity_linking/: alias.py  build_embedding_cache.py  dictionary.py  embedding_index.py  evaluator.py  matcher.py  matcher_vectorized.py  normalize.py  pipeline.py  sweep_sanity_threshold.py
src/clinical_nlp/ner/: alignment.py  constants.py  evaluate.py  generate_synthetic.py  generate_synthetic_batch2.py  generate_synthetic_batch3.py  generate_synthetic_batch4.py  generate_synthetic_batch5_lab.py  predict.py  sanity.py  sanity_check.py  train.py
src/clinical_nlp/ner/convert/: vimq.py
tests/: test_alignment.py
