[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clinical-nlp"
version = "0.1.0"
description = "Clinical NLP pipeline: NER + Entity Linking for Vietnamese EHR"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.30",
    "datasets",
    "torch>=2.0",
    "accelerate",
    "seqeval",
    "pandas",
    "numpy",
    "rapidfuzz",
    "openpyxl",
    "pyyaml",
]

[project.optional-dependencies]
colab = [
    "sentence-transformers",
    "faiss-cpu",
]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]